# NexaCorp-Chatbot

./: .gitignore  NexaCorp_Enterprise_Policy_Handbook_v5.2.docx  RAG chatbot usinf LangGraph.ipynb  RAG chatbot.ipynb  TEST-1.docx  TEST-2.docx  chatbot copy.ipynb  chatbot.backend.py  chatbot.ipynb  chatbot.py  chatbot_backend.py  chatbot_frontend.py  data_pipeline.py  main.py  pyproject.toml  test-2.ipynb  test.ipynb  ~$TEST-1.docx  ~$xaCorp_Enterprise_Policy_Handbook_v5.2.docx
config/: llm.py
data_pipeline/: data_ingestion.py
graph/: workflow.py
nodes/: answer_generation.py  query_decomposition.py  reranker.py  retrieval.py
parent_doc_store/: 00a93873-5e2e-4dbe-984a-dd7398a809cd  01c8fd89-f236-47fa-83a5-7466efcf7cbd  0232ef10-ae00-4522-8d19-8b953ed1ee6e  02c02788-1c7b-493c-922e-8683fae0f4c1  038c660c-3d61-41cc-b599-6afaec047402  050fe455-4d67-4f12-afe3-1e07c7f1a951  053127bc-a4dd-412d-a48f-b977e234525b  0564663a-46a1-4884-83e3-2a54da12491e  05c3af1c-b9cd-463d-9663-df480a057c09  075b1df0-7f5f-49c8-81b5-652019eb8d68  07bce121-42a5-4db8-815e-33f1961be7ef  08d9bef1-2b71-4323-8962-b35b338e5133  09621320-7d09-4d3f-845f-fbcf129c3850  0b5e3b01-5dd9-4415-9891-9ee8c43e3fb1  0bee3241-b7e4-40e9-a59a-e99546107f66  0c1ba2c0-223b-4d84-b2cb-e12a7cc06787  0cfc320e-8ffa-4606-83a0-c71e72d31807  0f76b4d6-a9a4-4c41-853c-c41ead6f986b  0fd1019d-c0c4-4119-81a8-5f7c4a22e9c4  11c46864-7601-4fa0-9118-0d95471cd141  15bfd7d4-c2a7-40d0-9e59-74853848fea1  161663fe-8345-483b-a282-0e023b0a88bb  16278673-e8f8-43aa-be66-d442a3051774  17b6efbf-5def-4b87-bdfc-b02a59606065  (+227 more)
schemas/: query_schema.py  (+1 more)
(+47 files in other folders)
