[project]
name = "tanishproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "numpy>=2.4.3",
    "pinecone-client>=6.0.0",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "unstructured>=0.22.23",
]
